cmake_minimum_required(VERSION 3.13)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-Wall -Werror")
include_directories(../src)
include_directories(../asm)

add_executable(testcase1 testcase1.cc)
target_link_libraries(testcase1 src)
add_executable(testcase2 testcase2.cc)
target_link_libraries(testcase2 src)
add_executable(testcase3 testcase3.cc)
target_link_libraries(testcase3 src)
add_executable(testcase4 testcase4.cc)
target_link_libraries(testcase4 src)